feat: 更新 Minecraft 和 Fabric 版本至 1.21.8，升级 Gradle 版本至 9.6.1